Fix shift cover scroll

--- a/scss/components/_sidebar.scss
+++ b/scss/components/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
   background: $sidebar-color;
   position: relative;
+  z-index: 1;
   width: 160px;
   top: 0;
   left: 0;
@@ -8,7 +9,7 @@
   display: flex;
   flex-direction: column;
   border-right: 1px solid #ddd;
-  
+
   &__drag {
     height: 30px;
     -webkit-app-region: drag;
