--- a/scss/components/_views.scss
+++ b/scss/components/_views.scss
@@ -2,7 +2,7 @@
   position: relative;
   flex: 1;
   overflow: scroll;
-  
+
   &:after {
     content: '';
     position: fixed;
@@ -10,7 +10,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: rgba(0,0,0,.3);
     display: none;
   }
 }
@@ -26,7 +26,7 @@
   top: 0;
   left: 0;
   opacity: 1;
-  
+
   &.is-hidden {
     opacity: 0;
   }
@@ -36,12 +36,12 @@
     opacity: 0;
     transition: opacity 200ms;
   }
-  
+
   &:hover .icon {
     opacity: .3;
     transition: opacity 200ms;
   }
-  
+
   // Add some space after the last item so
   // user can scroll to right with a gutter
   &:last-child:after {
